--- a/app/src/main/res/layout/book_detail_layout.xml
+++ b/app/src/main/res/layout/book_detail_layout.xml
@@ -8,7 +8,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/save_book"
+        android:text="@string/edit_book"
         android:id="@+id/btn_save_book"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
@@ -22,7 +22,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="41dp" />
+        android:layout_marginTop="41dp"
+        android:editable="false" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -69,12 +70,12 @@
     <RatingBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ratingBar"
+        android:id="@+id/rating_view_detail"
         android:numStars="5"
         android:rating="3.5"
         android:stepSize=".5"
         android:layout_below="@+id/textView3"
         android:layout_alignParentLeft="true"
 
- />
+        />
 </RelativeLayout>
