--- a/app/src/main/res/layout/add_book_layout.xml
+++ b/app/src/main/res/layout/add_book_layout.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/title"
-        android:id="@+id/textView"
+        android:id="@+id/tv_title"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/description"
-        android:id="@+id/textView2"
+        android:id="@+id/tv_description"
         android:layout_below="@+id/et_title"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/rating"
-        android:id="@+id/textView3"
+        android:id="@+id/tv_rating"
         android:layout_below="@+id/et_description"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -69,12 +69,33 @@
     <RatingBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ratingBar"
+        android:id="@+id/rb_ratingBar"
         android:numStars="5"
         android:rating="3.5"
         android:stepSize=".5"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/tv_rating"
         android:layout_alignParentLeft="true"
 
  />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Minutes read already"
+        android:id="@+id/tv_minutes"
+        android:layout_below="@+id/rb_ratingBar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:paddingLeft="12dp" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spn_minutes_spinner"
+        android:layout_toEndOf="@+id/tv_title"
+        android:layout_below="@+id/tv_minutes"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
