--- a/app/src/main/res/layout/book_detail_layout.xml
+++ b/app/src/main/res/layout/book_detail_layout.xml
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/rating"
-        android:id="@+id/textView3"
+        android:id="@+id/tv_rating"
         android:layout_below="@+id/et_description"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -74,8 +74,28 @@
         android:numStars="5"
         android:rating="3.5"
         android:stepSize=".5"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/tv_rating"
         android:layout_alignParentLeft="true"
 
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Minutes read "
+        android:id="@+id/tv_minutes"
+        android:paddingLeft="12dp"
+        android:layout_below="@+id/rating_view_detail"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/et_minutes_read"
+        android:paddingLeft="12dp"
+        android:layout_below="@+id/tv_minutes"
+        android:layout_alignParentStart="true"
+        android:textColor="#ff0b4113" />
 </RelativeLayout>
