--- a/app/src/main/res/layout/book_detail_layout.xml
+++ b/app/src/main/res/layout/book_detail_layout.xml
@@ -5,16 +5,6 @@
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/edit_book"
-        android:id="@+id/btn_save_book"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:enabled="false" />
-
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -23,7 +13,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="41dp"
-        android:editable="false" />
+        android:enabled="true"
+        android:focusable="true"
+        android:editable="true"
+        android:focusableInTouchMode="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,7 +27,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:paddingLeft="12dp" />
+        android:paddingLeft="12dp"
+        />
 
     <EditText
         android:layout_width="fill_parent"
@@ -43,7 +37,11 @@
         android:layout_below="@+id/et_title"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp" />
+        android:layout_marginTop="42dp"
+        android:enabled="true"
+        android:editable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,7 +52,8 @@
         android:layout_below="@+id/et_title"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:paddingLeft="12dp" />
+        android:paddingLeft="12dp"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -65,7 +64,8 @@
         android:layout_below="@+id/et_description"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:paddingLeft="12dp" />
+        android:paddingLeft="12dp"
+        />
 
     <RatingBar
         android:layout_width="wrap_content"
@@ -87,6 +87,7 @@
         android:paddingLeft="12dp"
         android:layout_below="@+id/rating_view_detail"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        />
 
 </RelativeLayout>
