--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,12 +3,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-
+        <item name="windowActionModeOverlay">true</item>
     </style>
     <style name="CustomActionBarTheme"
         parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorAccent">@color/accent</item>
+        <item name="windowActionModeOverlay">true</item>
+
      </style>
 
     <style name="LoginFormContainer">
