--- a/app/src/main/res/layout/activity_main_book.xml
+++ b/app/src/main/res/layout/activity_main_book.xml
@@ -3,22 +3,22 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainBookActivity">
 
-
+    <include layout="@layout/toolbar"/>
 
     <ListView
-
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/books_listview"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/support_toolbar"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/btn_add_book"
