--- a/app/src/main/res/menu/book_detail_contextual.xml
+++ b/app/src/main/res/menu/book_detail_contextual.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">>
 
     <item android:id ="@+id/action_save_book"
-        android:icon = "@drawable/ic_action_accept"
+        android:icon = "@drawable/ic_action_save"
         android:title = "@string/save_book"
         app:showAsAction="always"
         />
