--- a/app/src/main/res/layout/add_book_layout.xml
+++ b/app/src/main/res/layout/add_book_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout
+    android:id="@+id/add_book_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -96,5 +97,14 @@
         android:layout_below="@+id/tv_minutes"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <com.parse.ParseImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/iv_cover_photo"
+        android:src="@drawable/default_cover"
+        android:layout_below="@+id/spn_minutes_spinner"
+        android:layout_alignRight="@+id/tv_minutes"
+        android:layout_alignEnd="@+id/tv_minutes" />
 
 </RelativeLayout>
