--- a/app/src/main/res/layout/add_book_layout.xml
+++ b/app/src/main/res/layout/add_book_layout.xml
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Minutes read already"
+        android:text="@string/minutes_read"
         android:id="@+id/tv_minutes"
         android:layout_below="@+id/rb_ratingBar"
         android:layout_alignParentLeft="true"
