--- a/app/src/main/res/layout/book_detail_layout.xml
+++ b/app/src/main/res/layout/book_detail_layout.xml
@@ -79,12 +79,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Minutes read "
+        android:text="@string/minutes_read"
         android:id="@+id/tv_minutes"
         android:paddingLeft="12dp"
         android:layout_below="@+id/rating_view_detail"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         />
+
+    <com.parse.ParseImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/iv_cover_photo"
+        android:layout_below="@+id/tv_minutes"
+        android:layout_alignParentLeft="true"/>
 
 </RelativeLayout>
