--- a/app/src/main/res/layout/activity_main_book.xml
+++ b/app/src/main/res/layout/activity_main_book.xml
@@ -26,6 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:src="@drawable/ic_add_white_24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
         fab:fab_colorNormal="@color/accent"
         fab:fab_colorPressed="@color/accent_pressed"
         fab:fab_colorRipple="@color/ripple"
