book list activity only refreshes when the bookdetail has edited a book. added cool slider activity for slideback closing.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
         <color name="accent">#FFCA28</color>
         <color name="accent_pressed">#FF8F00</color>
         <color name="black">#000000</color>
+        <color name="white">#ffffff</color>
 </resources> 
