--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -20,18 +20,21 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="128dp"
-        android:text="@string/login" />
+        android:text="@string/login"
+        android:background="@android:color/white"
+        android:textColor="@color/abc_primary_text_material_light" />
 
     <Button
         android:id="@+id/signup_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/login_button"
-        android:text="@string/signup" />
+        android:text="@string/signup"
+        android:textColor="@color/accent"
+        android:background="@android:color/transparent"
+        android:layout_marginTop="28dp"
+        android:layout_below="@+id/login_button"
+        android:layout_toRightOf="@+id/textview_3"
+        android:layout_toEndOf="@+id/textview_3" />
 
     <TextView
         android:id="@+id/textview_1"
