--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -4,7 +4,7 @@
     android:paddingRight="0dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.android.bradholland.bookmark.GraphActivity">
+    tools:context="com.android.bradholland.bookmark.StatsActivity">
 
     <include layout="@layout/toolbar"
         android:id="@+id/support_toolbar" />
