began to implement charts for each tab in the viewpager. Need to learn a bit more about fragments to work with the Parse data...

--- a/app/src/main/res/layout/tab_monthly.xml
+++ b/app/src/main/res/layout/tab_monthly.xml
@@ -5,10 +5,43 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Monthly Stats Layout"
-        android:id="@+id/textView"
-        android:layout_centerVertical="true"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Current Title"
+        android:id="@+id/current_title_text"
+        android:padding="8dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <org.eazegraph.lib.charts.BarChart
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/current_title_chart"
+        android:layout_width="match_parent"
+        android:layout_height="256dp"
+        android:padding="10dp"
+        android:layout_below="@id/current_title_text"
+        app:egFixedBarWidth="true"
+        app:egBarWidth="20dp"
+        app:egLegendHeight="30dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="All Books"
+        android:id="@+id/overall_titles_text"
+        android:padding="8dp"
+        android:layout_below="@id/current_title_chart"
+        android:layout_centerHorizontal="true" />
+
+    <org.eazegraph.lib.charts.BarChart
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/all_books_chart"
+        android:layout_width="match_parent"
+        android:layout_height="256dp"
+        android:padding="10dp"
+        android:layout_below="@id/overall_titles_text"
+        app:egFixedBarWidth="true"
+        app:egBarWidth="20dp"
+        app:egLegendHeight="30dp"/>
 
 </RelativeLayout>
