--- a/app/src/main/res/layout/activity_main_book.xml
+++ b/app/src/main/res/layout/activity_main_book.xml
@@ -15,6 +15,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_width="wrap_content"
+        android:scrollbarStyle="outsideOverlay"
         android:layout_height="wrap_content"
         android:id="@+id/books_listview"
         android:layout_below="@+id/support_toolbar"
