added the current week and month counts to the graphs which use the accent color.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
         <color name="primary">#43B8B8</color>
         <color name="primary_pressed">#079090</color>
         <color name="ripple">#ffe45e</color>
-        <color name="accent">#FFCA28</color>
+        <color name="accent">#ffffca28</color>
         <color name="accent_pressed">#FF8F00</color>
         <color name="black">#000000</color>
         <color name="white">#ffffff</color>
