--- a/app/src/main/res/layout/tab_monthly.xml
+++ b/app/src/main/res/layout/tab_monthly.xml
@@ -7,7 +7,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Current Title"
-        android:id="@+id/current_title_text"
+        android:id="@+id/current_title"
         android:padding="8dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -17,11 +17,14 @@
         android:id="@+id/current_title_chart"
         android:layout_width="match_parent"
         android:layout_height="256dp"
-        android:padding="10dp"
-        android:layout_below="@id/current_title_text"
+        android:padding="5dp"
+        android:layout_below="@id/current_title"
         app:egFixedBarWidth="true"
-        app:egBarWidth="20dp"
-        app:egLegendHeight="30dp"/>
+        app:egVisibleBars="6"
+        app:egBarWidth="24dp"
+        app:egLegendHeight="30dp"
+        app:egEnableScroll="false"
+        app:egShowDecimal="false"/>
 
     <TextView
         android:layout_width="wrap_content"
