--- a/app/src/main/res/layout/book_detail_layout.xml
+++ b/app/src/main/res/layout/book_detail_layout.xml
@@ -4,7 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/white"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto">
 
     <include layout="@layout/toolbar"/>
 
@@ -95,11 +96,17 @@
         android:layout_below="@+id/tv_minutes"
         android:layout_alignParentLeft="true"/>
 
-    <Button
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/btn_add_log"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start_reading"
-        android:id="@+id/btn_start_reading"
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/ic_add_white_24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/accent_pressed"
+        fab:fab_colorRipple="@color/ripple"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
