--- a/app/src/main/res/layout/detail_parallax_layout.xml
+++ b/app/src/main/res/layout/detail_parallax_layout.xml
@@ -35,7 +35,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                android:text="text" />
+                android:text="@string/lipsum" />
         </RelativeLayout>
 
     </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
