--- a/app/src/main/res/layout/detail_parallax_layout.xml
+++ b/app/src/main/res/layout/detail_parallax_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
@@ -12,12 +13,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/image"
+
+            <com.parse.ParseImageView
+                android:id="@+id/iv_cover_photo"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/parallax_image_height"
-                android:scaleType="centerCrop"
-                android:src="@drawable/default_cover" />
+                android:scaleType="centerCrop"/>
 
             <View
                 android:id="@+id/anchor"
@@ -26,16 +27,41 @@
                 android:minHeight="@dimen/parallax_image_height" />
 
             <TextView
-                android:id="@+id/body"
+                android:id="@+id/tv_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/anchor"
-                android:background="@android:color/white"
-                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:background="@color/primary"
+                android:paddingBottom="16dp"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:text="@string/lipsum" />
+                android:paddingTop="16dp"
+                android:textSize="24sp"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/tv_log_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_description"
+                android:background="@android:color/white"
+                android:paddingBottom="16dp"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="8dp"
+                android:textSize="18sp"
+                android:text="@string/recent_logs"
+                android:textColor="@color/primary" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/ll_logs_preview"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_log_header"
+                android:background="@android:color/white" />
+
+
         </RelativeLayout>
 
     </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
@@ -45,6 +71,19 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/gradient_header_background"
         android:minHeight="?attr/actionBarSize" />
+
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/btn_add_log"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/ic_add_white_24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/accent_pressed"
+        fab:fab_colorRipple="@color/ripple"
+        android:layout_alignParentRight="true" />
 
     <include layout="@layout/toolbar"/>
 
