--- a/app/src/main/res/menu/book_detail_contextual.xml
+++ b/app/src/main/res/menu/book_detail_contextual.xml
@@ -7,5 +7,10 @@
         android:title = "@string/save_book"
         app:showAsAction="always"
         />
+    <item android:id ="@+id/action_delete_book"
+        android:title = "@string/delete_book"
+        android:icon = "@drawable/ic_action_discard"
+        app:showAsAction="never"
+        />
 
 </menu>
