--- a/app/src/main/res/menu/main_book.xml
+++ b/app/src/main/res/menu/main_book.xml
@@ -1,12 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainBookActivity" >
+    tools:context=".BookListActivity" >
+
+    <item android:id="@+id/refresh_data"
+        android:title="Refresh"
+        android:orderInCategory="1"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_autorenew_white" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
     <item android:id="@+id/log_out"
         android:title="@string/log_out"
         android:orderInCategory="101"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 </menu>
