removed dispatch activity for better UI flow. Added toolbar spinner in the stats activity so the user can choose which book to display.

--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -43,7 +43,8 @@
         android:layout_below="@+id/description_view"
         android:layout_toRightOf="@+id/iv_cover_photo"
         android:layout_toEndOf="@+id/iv_cover_photo"
-        android:textColor="@color/black" />
+        android:textColor="@color/primary_pressed"
+        android:paddingTop="8dp" />
 
 
 </RelativeLayout>
