changed add book activity to have new UI, removed ratingbar

--- a/app/src/main/res/drawable/button_custom.xml
+++ b/app/src/main/res/drawable/button_custom.xml
@@ -3,6 +3,12 @@
     <item android:drawable="@drawable/button_pressed"
         android:state_pressed="true" />
 
+    <item android:drawable="@drawable/button_disabled"
+        android:state_enabled="false" />
+
+    <item android:drawable="@drawable/button"
+        android:state_enabled="true"/>
+
     <item android:drawable="@drawable/button" />
 
 </selector>
