--- a/app/src/main/res/layout/tab_weekly.xml
+++ b/app/src/main/res/layout/tab_weekly.xml
@@ -20,7 +20,7 @@
         android:padding="5dp"
         android:layout_below="@id/current_title"
         app:egFixedBarWidth="true"
-        app:egVisibleBars="8"
+        app:egVisibleBars="6"
         app:egBarWidth="24dp"
         app:egLegendHeight="30dp"
         app:egEnableScroll="false"
@@ -41,10 +41,12 @@
         android:id="@+id/all_books_chart"
         android:layout_width="match_parent"
         android:layout_height="256dp"
-        android:padding="10dp"
+        android:padding="5dp"
+        app:egVisibleBars="6"
         android:layout_below="@id/overall_titles_text"
         app:egFixedBarWidth="true"
-        app:egBarWidth="20dp"
+        app:egBarWidth="24dp"
+        app:egEnableScroll="false"
         app:egLegendHeight="30dp"/>
 
 
