--- a/app/src/main/res/menu/main_book.xml
+++ b/app/src/main/res/menu/main_book.xml
@@ -8,6 +8,9 @@
         android:orderInCategory="1"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_autorenew_white" />
+    <item android:id="@+id/cloud_sync"
+        android:title="Sync with cloud data"
+        app:showAsAction="never" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
